// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package datacommons.v2;

option go_package = "github.com/datacommonsorg/mixer/internal/proto/v2";

import "v1/event.proto";

// Two modes are supported:
//
// EventCollection:
//   node = 'country/USA'
//   property = '<-location{typeOf:FireEvent, date:2020-10, area:3.1#6.2#Acre}'
// NOTE:
//   - burnedArea:3.14#6.28#Acre means filterProp:lowerLimit#upperLimit#unit
//   - The format of 'date' is YYYY-MM.
//
// EventCollectionDate:
//   node = 'country/USA'
//   property = ‘<-location{typeOf:FireEvent}->date’,
message EventRequest {
  string node = 1;
  string property = 2;
}

message EventResponse {
    datacommons.v1.EventCollection event_collection = 1;
    datacommons.v1.EventCollectionDate event_collection_date = 2;
}